# BuyMe_Project

./: BuyMe_log.txt  Data.json  base_page.py  home_page.py  main.py  main_run.py  main_test.py  main_tests.py  pyproject.toml
Errors/: BuyMe_log.txt
allure-report/: 4d436ad6-a04a-4f72-baae-786ca975390f-container.json  df6c2e15-2790-425c-86ee-d653c866fd4f-result.json
allure-report/export/: influxDbData.txt
allure-reports/: 073e9650-4999-4a24-88d9-b960fcb2949a-attachment.txt  77314384-1406-4c90-b74c-96a5404cc148-result.json  ba8cbd48-974d-4bd8-864e-4060ff630d57-container.json
pages/: acquire_present_page.py  business_page.py  gift_cards_page.py  home_page.py  register_page.py
