[tool.poetry]
name = "buyme-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "buyme_project"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.8.3"
requests = "^2.28.2"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
